--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="/src/assets/css/main.css" />
+    <link rel="stylesheet" href="/src/assets/css/main.css" />
+    <noscript>
+      <link rel="stylesheet" href="/src/assets/css/noscript.css" />
+    </noscript>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pomodoro-app</title>
+    <title>Pomodoro App</title>
   </head>
   <body>
     <div id="root"></div>
