--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/src/assets/css/main.css" />
     <link rel="stylesheet" href="/src/assets/css/main.css" />
     <noscript>
       <link rel="stylesheet" href="/src/assets/css/noscript.css" />
